topnav bar now display on small screen correctly

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2513,8 +2513,19 @@ input, select, textarea {
 				.main > .content h3 {
 					font-size: 1.25em;
 				}
+        /* Top Nav Sections */
 
-	}
+        .topnav a, .topnav input[type=text], .topnav .dropdown {
+            display: inline-block;
+            text-align: center;
+            width: 100%;
+            margin: 0;
+        }
+
+
+    }
+
+    /*-----------------------------------*/
 
     /* Add a black background color to the top navigation */
     .topnav {
@@ -2599,86 +2610,77 @@ input, select, textarea {
     }
 
 
+.topnav .dropdown {
+  float: left;
+  overflow: hidden;
+}
 
-
-    .dropdown {
+.topnav a .dropdown {
       float: left;
-      overflow: hidden;
-    }
-
-    .dropdown .dropbtn {
-      font-size: 17px;
-      border: none;
-      outline: none;
-      color: white;
-      background-color: inherit;
-      font-family: inherit;
-      margin: 0;
-    }
-
-    .dropdown-content {
-      display: none;
-      background-color: #f9f9f9;
-      overflow: hidden;
-      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-      width: 100%;
-      z-index: 1;
-    }
-
-    .dropdown-content a {
-      float: right;
-      color: black;
-      padding: 12px 16px;
-      text-decoration: none;
-      display: block;
+      color: #f2f2f2;
       text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      font-size: 17px;
     }
 
+.topnav .dropdown .dropbtn {
+  font-size: 17px;
+  border: none;
+  outline: none;
+  color: white;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
 
-    /* Add a grey background color to dropdown links on hover */
-    .dropdown-content a:hover {
-      background-color: #ddd;
-    }
+.topnav .dropdown-content {
+  display: none;
+  background-color: #f9f9f9;
+  overflow: hidden;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  width: 100%;
+  z-index: 1;
+}
 
-    /* Show the dropdown menu on hover */
-    .dropdown:hover .dropdown-content {
-      display: block;
-    }
+.topnav .dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: center;
+}
 
-    @media screen and (max-width: 600px) {
-      .topnav .search-container {
-        float: none;
-      }
 
-    .topnav a, .topnav input[type=text], .topnav .search-container .dropdown-content button {
-        float: none;
-        display: block;
-        text-align: left;
-        width: 100%;
-        margin: 0;
-        padding: 14px;
-    }
-    .topnav input[type=text] {
-        border: 1px solid #ccc;
-    }
-    }
-    .carousel-caption {
-       position: absolute;
-       left: 15%;
-       right: 15%;
-       bottom: 30px;
-       z-index: 15;
-       padding-top: 20px;
-       padding-bottom: 20px
-       text-align: center;
-       font-size: 60px
-    }
+/* Add a grey background color to dropdown links on hover */
+.topnav .dropdown-content a:hover {
+  background-color: #ddd;
+}
 
-    form {
-      color: #555;
-      display: flex;
-      padding: 2px;
-    }
+/* Show the dropdown menu on hover */
+.topnav .dropdown:hover .dropdown-content {
+  display: block;
+}
+
+
+.carousel-caption {
+   position: absolute;
+   left: 15%;
+   right: 15%;
+   bottom: 30px;
+   z-index: 15;
+   padding-top: 20px;
+   padding-bottom: 20px
+   text-align: center;
+   font-size: 60px
+}
+
+form {
+  color: #555;
+  display: flex;
+  padding: 2px;
+}
 
 
 
